# StudentManagement/SmartCampus.BLL/DTOs/Attendances/BulkAttendanceItemRequest.cs
@@ -1,0 +1,16 @@
+using System.ComponentModel.DataAnnotations;
+
+namespace SmartCampus.BLL.DTOs.Attendances;
+
+public class BulkAttendanceItemRequest
+{
+    [Range(1, int.MaxValue)]
+    public int StudentId { get; set; }
+
+    [Required]
+    [MaxLength(50)]
+    public string Status { get; set; } = string.Empty;
+
+    [MaxLength(255)]
+    public string? Note { get; set; }
+}
