# StudentManagement/SmartCampus.BLL/DTOs/Attendances/BulkAttendanceResponse.cs
@@ -1,0 +1,12 @@
+namespace SmartCampus.BLL.DTOs.Attendances;
+
+public class BulkAttendanceResponse
+{
+    public int ClassId { get; set; }
+
+    public DateOnly AttendanceDate { get; set; }
+
+    public int CreatedCount { get; set; }
+
+    public IReadOnlyList<AttendanceResponse> CreatedAttendances { get; set; } = [];
+}
